--- a/1-glossary/package.json
+++ b/1-glossary/package.json
@@ -13,8 +13,9 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-loader": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.4",
@@ -23,5 +24,9 @@
     "react-dom": "^17.0.2",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
   }
 }
